Terminado el maquetado

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,6 @@
     "titleBar.activeBackground": "#741173",
     "titleBar.activeForeground": "#FEFBFE"
   },
-  "cSpell.words": ["Hightlights", "Nexts"],
-  "cSpell.ignoreWords": ["Airpressure"]
+  "cSpell.words": ["Citys", "Hightlights", "Nexts"],
+  "cSpell.ignoreWords": ["Airpressure", "humidtyStile"]
 }
