--- a/netifly.toml
+++ b/netifly.toml
@@ -1,1 +1,7 @@
-/*Access-Control-Allow-Origin: *
+# The following redirect is intended for use with most SPAs that handle
+# routing internally.
+[[headers]]
+  # Define which paths this specific [[headers]] block will cover.
+  for = "/*"
+    [headers.values]
+    Access-Control-Allow-Origin = "*"
