--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [[redirects]]
-  from = "/cors-proxy/*"
-  to = "https://www.metaweather.com/api/location/search/?lattlong=19.365888,-99.0609408"
+  from = "/cors-proxy/"
+  to = "https://www.metaweather.com/api/location/search"
   status = 200
   force = true
   headers = {Access-Control-Allow-Origin = "*"}
