--- a/netlify.toml
+++ b/netlify.toml
@@ -5,10 +5,18 @@
   query = {lattlong = ":lattlong"}
   force = true
   headers = {Access-Control-Allow-Origin = "*"}
+
+[[redirects]]
+  from = "/cors-proxy/*"
+  to = "https://www.metaweather.com/api/location/search/"
+  status = 200
+  query = {lattlong = ":lattlong"}
+  force = true
+  headers = {Access-Control-Allow-Origin = "*"}
   
 [[redirects]]
 from = "/cors-data/*"
-to = "https://www.metaweather.com/api/location/:splat"
+to = "https://www.metaweather.com/api/location/116545"
 status = 200
 force = true
 headers = {Access-Control-Allow-Origin = "*"}
